fixed faulty spacing

--- a/src/Components/MainScreen/MainScreen.scss
+++ b/src/Components/MainScreen/MainScreen.scss
@@ -212,7 +212,8 @@ $break-large: 1025px;
 .garrantyDiv {
     position: relative;
     top: 350px;
-    z-index: 20;    
+    z-index: 20;  
+}  
 .linksLeft {
     margin-right: 16px;
     color: #404348;
